--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,9 @@ actix-multipart = "0.7.2"
 actix-web = "4.9.0"
 bv_decoder = { path = "lib/bv_decoder" }
 bollard = "0.18.1"
+bson = { version = "2.14.0", features = ["chrono-0_4"] }
 chrono = "0.4.39"
 clap = { version = "4.5.30", features = ["derive"] }
-deadpool = "0.12.2"
-deadpool-postgres = "0.14.1"
 derive_more = { version = "1.0.0", features = ["display", "error"] }
 env_logger = "0.11.6"
 futures-util = "0.3.31"
@@ -29,10 +28,6 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_derive = "1.0.218"
 serde_json = "1.0.139"
 sha2 = "0.10.8"
-sql_minifier = { path = "lib/sql_minifier" }
 tokio = "1.43.0"
-tokio-postgres = { version = "0.7.13", features = [
-  "with-chrono-0_4",
-  "with-serde_json-1",
-] }
 toml = "0.8.20"
+regex = "1.11.1"
