--- a/compose.yml
+++ b/compose.yml
@@ -13,12 +13,14 @@ services:
       interval: 20s
       timeout: 3s
       retries: 5
-    depends_on:
-      mongo:
-        condition: service_healthy
+    # depends_on:
+    #   mongo:
+    #     condition: service_healthy
 
   mongo:
     image: mongo:8.0.4
+    profiles:
+      - db
     ports:
       - ${DB_PORT:-27017}:27017
     volumes:
@@ -29,6 +31,15 @@ services:
       interval: 10s
       retries: 5
       timeout: 5s
+
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - 8081:8080
+    environment:
+      BASE_URL: /docs
+      URLS: >-
+        [{url: "http://localhost:8080/cv-api/v1/", name: "VSC Contract Verifier"}]
 
   cloudflared:
     image: cloudflare/cloudflared:latest
